oldexamples/examples/yaccpar/parser.output
Terminals which are not used

   KW_ABSTYPE
   KW_EQTYPE
   KW_OR
   LBRACE
   RBRACE
   ASSIGN
   SEMICOLON
   LESS
   LESSEQ
   GREATER
   GREATEREQ
   EQEQ
   LESSGT
   SLASH
   POWER
   UNSIGNED_INTEGER
   UNSIGNED_REAL


State 32 conflicts: 1 shift/reduce
State 134 conflicts: 12 reduce/reduce
State 135 conflicts: 1 shift/reduce
State 166 conflicts: 12 reduce/reduce
State 199 conflicts: 1 shift/reduce
State 231 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: stored_definition

    2 stored_definition: rml_file

    3 rml_file: KW_MODULE rml_ident COLON rml_interface rml_definitions
    4         | KW_INTERFACE rml_ident COLON rml_interface

    5 @1: /* empty */

    6 rml_interface: rml_interface_item_star @1 KW_END

    7 rml_interface_item_star: rml_interface_item rml_interface_item_star
    8                        | /* empty */

    9 rml_interface_item: KW_WITH SCON
   10                   | KW_TYPE tyvarparseq rml_ident
   11                   | KW_TYPE typbind_plus
   12                   | KW_DATATYPE datbind_plus withbind
   13                   | KW_VAL rml_ident COLON ty
   14                   | KW_RELATION rml_ident COLON ty

   15 rml_definitions: rml_definition_item rml_definitions
   16                | /* empty */

   17 rml_definition_item: KW_WITH SCON
   18                    | KW_TYPE typbind_plus
   19                    | KW_DATATYPE datbind_plus withbind
   20                    | KW_VAL rml_ident EQUALS rml_expression
   21                    | KW_RELATION relbind

   22 opt_type: COLON ty
   23         | empty

   24 relbind: rml_ident opt_type EQUALS clause_plus default_opt KW_END

   25 withbind: /* empty */
   26         | KW_WITHTYPE typbind_plus

   27 typbind_plus: typbind KW_AND typbind_plus
   28             | typbind

   29 typbind: tyvarseq rml_ident EQUALS ty

   30 datbind_plus: datbind KW_AND datbind_plus
   31             | datbind

   32 datbind: tyvarseq rml_ident EQUALS conbind_plus

   33 conbind_plus: conbind BAR conbind_plus
   34             | conbind

   35 conbind: rml_ident
   36        | rml_ident KW_OF tuple_ty

   37 default_opt: /* empty */
   38            | KW_DEFAULT clause_plus

   39 clause_plus: clause clause_plus
   40            | clause

   41 clause: KW_RULE conjunctive_goal_opt DASHES rml_ident seq_pat result
   42       | KW_AXIOM rml_ident seq_pat result

   43 result: /* empty */
   44       | YIELDS seq_exp
   45       | YIELDS KW_FAIL

   46 conjunctive_goal_opt: /* empty */
   47                     | conjunctive_goal

   48 conjunctive_goal: atomic_goal AMPERSAND conjunctive_goal
   49                 | atomic_goal

   50 atomic_goal: longorshortid seq_exp res_pat
   51            | rml_ident EQUALS rml_expression
   52            | KW_LET pat EQUALS rml_expression
   53            | KW_NOT atomic_goal
   54            | LPAR conjunctive_goal RPAR

   55 rml_expression: rml_exp_a COLONCOLON rml_expression
   56               | rml_exp_a

   57 rml_expression_list: rml_expression COMMA rml_expression_list
   58                    | rml_expression

   59 rml_exp_a: LPAR RPAR
   60          | LPAR rml_expression RPAR
   61          | LPAR rml_expression_list RPAR
   62          | rml_exp_c

   63 rml_exp_b: rml_exp_c COLONCOLON rml_exp_b
   64          | rml_exp_c

   65 rml_exp_c: longorshortid rml_exp_star
   66          | rml_addsub

   67 rml_addsub: rml_muldiv PLUS rml_addsub
   68           | rml_muldiv MINUS rml_addsub
   69           | rml_muldiv

   70 rml_muldiv: rml_unary STAR rml_muldiv
   71           | rml_unary DIV rml_muldiv
   72           | rml_unary

   73 rml_unary: MINUS rml_unary
   74          | rml_primary

   75 rml_primary: rml_literal
   76            | longorshortid
   77            | LBRACK rml_exp_comma_star RBRACK
   78            | LPAR rml_expression RPAR
   79            | LPAR RPAR

   80 rml_exp_comma_star: /* empty */
   81                   | rml_exp_comma_plus

   82 rml_exp_comma_plus: rml_expression COMMA rml_exp_comma_plus
   83                   | rml_expression

   84 rml_exp_star: LPAR rml_exp_comma_star RPAR

   85 seq_exp: /* empty */
   86        | rml_exp_b
   87        | rml_exp_star

   88 pat: rml_ident KW_AS pat
   89    | pat_a

   90 pat_a: pat_b COLONCOLON pat_a
   91      | pat_b

   92 pat_b: LPAR RPAR
   93      | LPAR pat RPAR
   94      | LPAR pat COMMA pat_comma_plus RPAR
   95      | pat_d

   96 pat_c: pat_d COLONCOLON pat_c
   97      | pat_d

   98 pat_d: longorshortid pat_star
   99      | longorshortid pat_e
  100      | pat_e

  101 pat_e: UNDERSCORE
  102      | rml_literal
  103      | longid
  104      | rml_ident
  105      | LBRACK pat_comma_star RBRACK

  106 res_pat: /* empty */
  107        | YIELDS seq_pat

  108 seq_pat: /* empty */
  109        | pat_c
  110        | pat_star

  111 pat_star: LPAR pat_comma_star RPAR

  112 pat_comma_star: /* empty */
  113               | pat_comma_plus

  114 pat_comma_plus: pat COMMA pat_comma_plus
  115               | pat

  116 rml_literal: CCON
  117            | ICON
  118            | RCON
  119            | SCON

  120 ty: seq_ty YIELDS seq_ty
  121   | tuple_ty

  122 tuple_ty: ty_sans_star STAR tuple_ty
  123         | ty_sans_star

  124 ty_sans_star: ty_sans_star longorshortid
  125             | LPAR ty RPAR
  126             | tyvar
  127             | longorshortid

  128 ty_comma_seq2: ty COMMA ty_comma_seq2
  129              | ty COMMA ty

  130 seq_ty: LPAR RPAR
  131       | LPAR ty_comma_seq2 RPAR
  132       | tuple_ty

  133 tyvarseq1: tyvar COMMA tyvarseq1
  134          | tyvar

  135 tyvarparseq: LPAR tyvarseq1 RPAR

  136 tyvarseq: /* empty */
  137         | tyvar
  138         | tyvarparseq

  139 longid: ident DOT ident

  140 longorshortid: longid
  141              | rml_ident

  142 ident: IDENT

  143 rml_ident: ident

  144 tyvar: TYVARIDENT

  145 empty: /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
KW_AND (258) 27 30
KW_AS (259) 88
KW_ABSTYPE (260)
KW_AXIOM (261) 42
KW_DATATYPE (262) 12 19
KW_DEFAULT (263) 38
KW_END (264) 6 24
KW_EQTYPE (265)
KW_FAIL (266) 45
KW_INTERFACE (267) 4
KW_LET (268) 52
KW_MODULE (269) 3
KW_NOT (270) 53
KW_OF (271) 36
KW_OR (272)
KW_RELATION (273) 14 21
KW_RULE (274) 41
KW_TYPE (275) 10 11 18
KW_VAL (276) 13 20
KW_WITH (277) 9 17
KW_WITHTYPE (278) 26
LBRACK (279) 77 105
RBRACK (280) 77 105
LBRACE (281)
RBRACE (282)
LPAR (283) 54 59 60 61 78 79 84 92 93 94 111 125 130 131 135
RPAR (284) 54 59 60 61 78 79 84 92 93 94 111 125 130 131 135
ASSIGN (285)
DOT (286) 139
COLON (287) 3 4 13 14 22
COLONCOLON (288) 55 63 90 96
COMMA (289) 57 82 94 114 128 129 133
DASHES (290) 41
BAR (291) 33
AMPERSAND (292) 48
SEMICOLON (293)
YIELDS (294) 44 45 107 120
STAR (295) 70 122
UNDERSCORE (296) 101
EQUALS (297) 20 24 29 32 51 52
PLUS (298) 67
MINUS (299) 68 73
DIV (300) 71
LESS (301)
LESSEQ (302)
GREATER (303)
GREATEREQ (304)
EQEQ (305)
LESSGT (306)
SLASH (307)
POWER (308)
UNSIGNED_INTEGER (309)
UNSIGNED_REAL (310)
IDENT (311) 142
TYVARIDENT (312) 144
CCON (313) 116
ICON (314) 117
RCON (315) 118
SCON (316) 9 17 119


Nonterminals, with rules where they appear

$accept (62)
    on left: 0
start (63)
    on left: 1, on right: 0
stored_definition (64)
    on left: 2, on right: 1
rml_file (65)
    on left: 3 4, on right: 2
rml_interface (66)
    on left: 6, on right: 3 4
@1 (67)
    on left: 5, on right: 6
rml_interface_item_star (68)
    on left: 7 8, on right: 6 7
rml_interface_item (69)
    on left: 9 10 11 12 13 14, on right: 7
rml_definitions (70)
    on left: 15 16, on right: 3 15
rml_definition_item (71)
    on left: 17 18 19 20 21, on right: 15
opt_type (72)
    on left: 22 23, on right: 24
relbind (73)
    on left: 24, on right: 21
withbind (74)
    on left: 25 26, on right: 12 19
typbind_plus (75)
    on left: 27 28, on right: 11 18 26 27
typbind (76)
    on left: 29, on right: 27 28
datbind_plus (77)
    on left: 30 31, on right: 12 19 30
datbind (78)
    on left: 32, on right: 30 31
conbind_plus (79)
    on left: 33 34, on right: 32 33
conbind (80)
    on left: 35 36, on right: 33 34
default_opt (81)
    on left: 37 38, on right: 24
clause_plus (82)
    on left: 39 40, on right: 24 38 39
clause (83)
    on left: 41 42, on right: 39 40
result (84)
    on left: 43 44 45, on right: 41 42
conjunctive_goal_opt (85)
    on left: 46 47, on right: 41
conjunctive_goal (86)
    on left: 48 49, on right: 47 48 54
atomic_goal (87)
    on left: 50 51 52 53 54, on right: 48 49 53
rml_expression (88)
    on left: 55 56, on right: 20 51 52 55 57 58 60 78 82 83
rml_expression_list (89)
    on left: 57 58, on right: 57 61
rml_exp_a (90)
    on left: 59 60 61 62, on right: 55 56
rml_exp_b (91)
    on left: 63 64, on right: 63 86
rml_exp_c (92)
    on left: 65 66, on right: 62 63 64
rml_addsub (93)
    on left: 67 68 69, on right: 66 67 68
rml_muldiv (94)
    on left: 70 71 72, on right: 67 68 69 70 71
rml_unary (95)
    on left: 73 74, on right: 70 71 72 73
rml_primary (96)
    on left: 75 76 77 78 79, on right: 74
rml_exp_comma_star (97)
    on left: 80 81, on right: 77 84
rml_exp_comma_plus (98)
    on left: 82 83, on right: 81 82
rml_exp_star (99)
    on left: 84, on right: 65 87
seq_exp (100)
    on left: 85 86 87, on right: 44 50
pat (101)
    on left: 88 89, on right: 52 88 93 94 114 115
pat_a (102)
    on left: 90 91, on right: 89 90
pat_b (103)
    on left: 92 93 94 95, on right: 90 91
pat_c (104)
    on left: 96 97, on right: 96 109
pat_d (105)
    on left: 98 99 100, on right: 95 96 97
pat_e (106)
    on left: 101 102 103 104 105, on right: 99 100
res_pat (107)
    on left: 106 107, on right: 50
seq_pat (108)
    on left: 108 109 110, on right: 41 42 107
pat_star (109)
    on left: 111, on right: 98 110
pat_comma_star (110)
    on left: 112 113, on right: 105 111
pat_comma_plus (111)
    on left: 114 115, on right: 94 113 114
rml_literal (112)
    on left: 116 117 118 119, on right: 75 102
ty (113)
    on left: 120 121, on right: 13 14 22 29 125 128 129
tuple_ty (114)
    on left: 122 123, on right: 36 121 122 132
ty_sans_star (115)
    on left: 124 125 126 127, on right: 122 123 124
ty_comma_seq2 (116)
    on left: 128 129, on right: 128 131
seq_ty (117)
    on left: 130 131 132, on right: 120
tyvarseq1 (118)
    on left: 133 134, on right: 133 135
tyvarparseq (119)
    on left: 135, on right: 10 138
tyvarseq (120)
    on left: 136 137 138, on right: 29 32
longid (121)
    on left: 139, on right: 103 140
longorshortid (122)
    on left: 140 141, on right: 50 65 76 98 99 124 127
ident (123)
    on left: 142, on right: 139 143
rml_ident (124)
    on left: 143, on right: 3 4 10 13 14 20 24 29 32 35 36 41 42 51
    88 104 141
tyvar (125)
    on left: 144, on right: 126 133 134 137
empty (126)
    on left: 145, on right: 23


state 0

    0 $accept: . start $end

    KW_INTERFACE  shift, and go to state 1
    KW_MODULE     shift, and go to state 2

    start              go to state 3
    stored_definition  go to state 4
    rml_file           go to state 5


state 1

    4 rml_file: KW_INTERFACE . rml_ident COLON rml_interface

    IDENT  shift, and go to state 6

    ident      go to state 7
    rml_ident  go to state 8


state 2

    3 rml_file: KW_MODULE . rml_ident COLON rml_interface rml_definitions

    IDENT  shift, and go to state 6

    ident      go to state 7
    rml_ident  go to state 9


state 3

    0 $accept: start . $end

    $end  shift, and go to state 10


state 4

    1 start: stored_definition .

    $default  reduce using rule 1 (start)


state 5

    2 stored_definition: rml_file .

    $default  reduce using rule 2 (stored_definition)


state 6

  142 ident: IDENT .

    $default  reduce using rule 142 (ident)


state 7

  143 rml_ident: ident .

    $default  reduce using rule 143 (rml_ident)


state 8

    4 rml_file: KW_INTERFACE rml_ident . COLON rml_interface

    COLON  shift, and go to state 11


state 9

    3 rml_file: KW_MODULE rml_ident . COLON rml_interface rml_definitions

    COLON  shift, and go to state 12


state 10

    0 $accept: start $end .

    $default  accept


state 11
